https://github.com/doduythinh/ReactJS/issues/18

--- a/src/Component/UI/Button/Button.css
+++ b/src/Component/UI/Button/Button.css
@@ -20,6 +20,10 @@
     margint-top:-500px
 }
 
+.Button:disabled{
+    color: #ccc;
+    cursor: not-allowed;
+}
 .Danger {
     color: #944317;
     margint-top:-500px
