--- a/src/Component/UI/Input/Input.css
+++ b/src/Component/UI/Input/Input.css
@@ -1,5 +1,5 @@
 .Input {
-    width: 90%;
+    width: 100%;
     padding: 10px;
     box-sizing: border-box;
 }
@@ -22,4 +22,8 @@
 .InputElement:focus{
     outline: none;
     background-color: #ccc ;
+}
+.Invalid {
+    border: 1px solid red;
+    background-color: #FDA49A;
 }
