--- a/src/Component/UI/Button/Button.css
+++ b/src/Component/UI/Button/Button.css
@@ -1,14 +1,14 @@
-/*.Button {*/
-/*    background-color: transparent;*/
-/*    border: none;*/
-/*    color: white;*/
-/*    outline: none;*/
-/*    cursor: pointer;*/
-/*    font: inherit;*/
-/*    padding: 10px;*/
-/*    margin: 10px;*/
-/*    font-weight: bold;*/
-/*}*/
+.Button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    font: inherit;
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+}
 
 .Button:first-of-type {
     margin-left: 0;
@@ -22,26 +22,8 @@
 
 .Success {
     color: #5C9210;
-    background-color: transparent;
-    border: none;
-    /*color: white;*/
-    outline: none;
-    cursor: pointer;
-    font: inherit;
-    padding: 10px;
-    margin: 10px;
-    font-weight: bold;
 }
 
 .Danger {
     color: #944317;
-    background-color: transparent;
-    border: none;
-    /*color: white;*/
-    outline: none;
-    cursor: pointer;
-    font: inherit;
-    padding: 10px;
-    margin: 10px;
-    font-weight: bold;
 }
